removing Perforce Ant tasks
git-svn-id: https://svn.apache.org/repos/asf/ant/core/trunk@1442023 13f79535-47bb-0310-9956-ffa450edef68

--- a/manual/install.html
+++ b/manual/install.html
@@ -846,7 +846,7 @@ Installing Ant / Optional Tasks</a> section above.</p>
   </tr>
   <tr>
     <td>jakarta-oro-2.0.8.jar</td>
-    <td>regexp type with mappers (if you do not wish to use java.util.regex) and the Perforce tasks<br>
+    <td>regexp type with mappers (if you do not wish to use java.util.regex)<br>
     To use the FTP task,
 you need jakarta-oro 2.0.8 or later, and <a href="#commons-net">commons-net</a></td>
     <td><a href="http://attic.apache.org/projects/jakarta-oro.html" target="_top">http://attic.apache.org/projects/jakarta-oro.html</a></td>
