add suppresssystemout attribute to optionally make sshexec silent PR 52070
git-svn-id: https://svn.apache.org/repos/asf/ant/core/trunk@1447370 13f79535-47bb-0310-9956-ffa450edef68

--- a/manual/Tasks/sshexec.html
+++ b/manual/Tasks/sshexec.html
@@ -116,6 +116,12 @@ and won't work with versions of jsch earlier than
      <td valign="top" align="center">No, defaults to an empty string.</td>
   </tr>
   <tr>
+    <td valign="top">suppresssystemout</td>
+    <td valign="top">Whether to suppress system out.
+      <em>since Ant 1.9.0</em></td>
+    <td align="center" valign="top">No, defaults to false</td>
+  </tr>
+  <tr>
     <td valign="top">output</td>
     <td valign="top">Name of a file to which to write the output.</td>
     <td align="center" valign="top">No</td>
