--- a/manual/Tasks/tstamp.html
+++ b/manual/Tasks/tstamp.html
@@ -129,7 +129,7 @@ sets the standard <code>DSTAMP</code>, <code>TSTAMP</code>,
 and <code>TODAY</code> properties according to the default formats.</p>
 <pre>
   &lt;tstamp&gt;
-    &lt;format property=&quot;TODAY_UK&quot; pattern=&quot;d-MMMM-yyyy&quot; locale=&quot;en,UK&quot;/&gt;
+    &lt;format property=&quot;TODAY_GB&quot; pattern=&quot;d-MMMM-yyyy&quot; locale=&quot;en,GB&quot;/&gt;
   &lt;/tstamp&gt;
 </pre>
 <p>
