adding an encoding attribute to the contains selector StringResource default encoding becomes UTF-8 changing ResourceUtils to use the String's encoding when copying from a String Bug Report 54606
git-svn-id: https://svn.apache.org/repos/asf/ant/core/trunk@1452118 13f79535-47bb-0310-9956-ffa450edef68

--- a/manual/Types/selectors.html
+++ b/manual/Types/selectors.html
@@ -133,6 +133,16 @@
         </td>
         <td valign="top" align="center">No</td>
       </tr>
+        <tr>
+            <td valign="top">encoding</td>
+            <td valign="top">Encoding of the resources being selected.
+                Required in practice if the encoding of the files being
+                selected is different from the default encoding of the JVM
+                where Ant is running.
+                Since Ant 1.9.0
+            </td>
+            <td valign="top" align="center">No</td>
+        </tr>
     </table>
 
     <p>Here is an example of how to use the Contains Selector:</p>
