add LoadResource to the list of tasks supporting filterchains
git-svn-id: https://svn.apache.org/repos/asf/ant/core/trunk@1456609 13f79535-47bb-0310-9956-ffa450edef68

--- a/manual/Types/filterchain.html
+++ b/manual/Types/filterchain.html
@@ -102,6 +102,7 @@ The following built-in tasks support nested <code>&lt;filterchain&gt;</code> ele
 <a href="../Tasks/copy.html">Copy</a>,<br>
 <a href="../Tasks/loadfile.html">LoadFile</a>,<br>
 <a href="../Tasks/loadproperties.html">LoadProperties</a>,<br>
+<a href="../Tasks/loadresource.html">LoadResource</a>,<br>
 <a href="../Tasks/move.html">Move</a><br><br>
 
 A FilterChain is formed by defining zero or more of the following
