typo reported by Charles Antony
git-svn-id: https://svn.apache.org/repos/asf/ant/core/trunk@1461421 13f79535-47bb-0310-9956-ffa450edef68

--- a/manual/Tasks/ear.html
+++ b/manual/Tasks/ear.html
@@ -227,7 +227,7 @@ to a value other than its default, <code>&quot;add&quot;</code>.</b></p>
     <td valign="top">createUnicodeExtraFields</td>
     <td valign="top">Whether to create unicode extra fields to store
       the file names a second time inside the entry's metadata.
-      <br>Possible values are "never", "always" and "not-encodable"
+      <br>Possible values are "never", "always" and "not-encodeable"
       which will only add Unicode extra fields if the file name cannot
       be encoded using the specified encoding.
       <em>Since Ant 1.8.0</em>.
