--- a/manual/Tasks/zip.html
+++ b/manual/Tasks/zip.html
@@ -256,7 +256,7 @@ archive.</p>
     <td valign="top">createUnicodeExtraFields</td>
     <td valign="top">Whether to create unicode extra fields to store
       the file names a second time inside the entry's metadata.
-      <br>Possible values are "never", "always" and "not-encodable"
+      <br>Possible values are "never", "always" and "not-encodeable"
       which will only add Unicode extra fields if the file name cannot
       be encoded using the specified encoding.
       <em>Since Ant 1.8.0</em>.
