PR 54879: echoxml documentation for namespacePolicy is unclear
git-svn-id: https://svn.apache.org/repos/asf/ant/core/trunk@1471592 13f79535-47bb-0310-9956-ffa450edef68

--- a/manual/Tasks/echoxml.html
+++ b/manual/Tasks/echoxml.html
@@ -48,10 +48,11 @@
   <tr>
     <td valign="top">namespacePolicy</td>
     <td valign="top">Sets the namespace policy as defined
-    by <code>org.apache.tools.ant.util.DOMElementWriter.XmlNamespacePolicy</code>. Valid
-    values are "ignore," "elementsOnly," or "all." Default is
-    "ignore".</td>
-    <td valign="top" align="center">No</td>
+      by <code>org.apache.tools.ant.util.DOMElementWriter.XmlNamespacePolicy</code>.
+      Valid values are <code>ignore</code>, <code>elementsOnly</code>, or <code>all</code>.
+      <strong>Since Apache Ant 1.8</strong>
+    </td>
+    <td valign="top" align="center">No, default <code>ignore</code></td>
   </tr>
 </table>
 <h3>Parameters specified as nested elements</h3>
