adding strict attribute to signjar task, PR 54889
git-svn-id: https://svn.apache.org/repos/asf/ant/core/trunk@1476700 13f79535-47bb-0310-9956-ffa450edef68

--- a/manual/Tasks/signjar.html
+++ b/manual/Tasks/signjar.html
@@ -100,6 +100,11 @@ and <tt>lazy</tt> is false, the JAR is signed.</li>
     <td valign="top" align="center">No; default false</td>
   </tr>
   <tr>
+    <td valign="top">strict</td>
+    <td valign="top">(true | false) strict checking when signing.<br/><em>since Ant 1.9.1</em>.</td>
+    <td valign="top" align="center">No; default false</td>
+  </tr>
+  <tr>
     <td valign="top">internalsf</td>
     <td valign="top">(true | false) include the .SF file inside the signature
 block</td>
