adding if and unless namespaces allowing to put conditions on all tasks and nested elements. Code written by Peter Reilly. Bugzilla PR 43362.
git-svn-id: https://svn.apache.org/repos/asf/ant/core/trunk@1479422 13f79535-47bb-0310-9956-ffa450edef68

--- a/manual/Types/namespace.html
+++ b/manual/Types/namespace.html
@@ -152,6 +152,10 @@
       </li>
     </ul>
     <p>
+      In Ant 1.9.1 two attribute namespaces ant:if and ant:unless are added in order to allow to insert elements
+      conditionally
+    </p>
+    <p>
       Other attributes are simply ignored.
     </p>
     <p>
