--- a/manual/conceptstypeslist.html
+++ b/manual/conceptstypeslist.html
@@ -35,6 +35,7 @@
 <li><a href="sysclasspath.html">build.sysclasspath</a></li>
 <li><a href="javacprops.html">Ant properties controlling javac</a></li>
 <li><a href="Tasks/common.html">Common Attributes</a></li>
+<li><a href="ifunless.html">If and Unless Attributes</a></li>
 </ul>
 
 <h3>List of Types</h3>
