--- a/manual/Types/namespace.html
+++ b/manual/Types/namespace.html
@@ -152,8 +152,8 @@
       </li>
     </ul>
     <p>
-      In Ant 1.9.1 two attribute namespaces ant:if and ant:unless are added in order to allow to insert elements
-      conditionally
+      In Ant 1.9.1 two attribute namespaces <code>ant:if</code> and <code>ant:unless</code> were added
+      to allow you to insert elements conditionally.
     </p>
     <p>
       Other attributes are simply ignored.
