sconnolly advises using TODO rather than XXX in comments.
git-svn-id: https://svn.apache.org/repos/asf/ant/core/trunk@1504315 13f79535-47bb-0310-9956-ffa450edef68

--- a/manual/properties.html
+++ b/manual/properties.html
@@ -61,7 +61,7 @@
   </p>
 
   <p>In addition, Ant has some built-in properties:</p>
-<pre><!-- XXX use <dl><dt><code>...</code></dt><dd>...</dd></dl> instead -->
+<pre><!-- TODO use <dl><dt><code>...</code></dt><dd>...</dd></dl> instead -->
 basedir             the absolute path of the project's basedir (as set
                     with the basedir attribute of <a href="using.html#projects">&lt;project&gt;</a>).
 ant.file            the absolute path of the buildfile.
