--- a/manual/tutorial-tasks-filesets-properties.html
+++ b/manual/tutorial-tasks-filesets-properties.html
@@ -883,7 +883,7 @@ do a second checkstyle run. Now our task isn't listed. That's fine :-)</p>
 <h3>Creating the diff</h3>
 <p>Creating a diff for Ant is very easy: just start <tt>ant -f patch.xml</tt> and all is done
 automatically. This step requires a cvs executable in your path and internet access (more precise:
-cvs access). As a result we get a file <i> XXX </i>.</p>
+cvs access). As a result we get a file <i> TODO </i>.</p>
 -->
 
 
