--- a/manual/Tasks/zip.html
+++ b/manual/Tasks/zip.html
@@ -148,8 +148,8 @@ archive.</p>
   <tr>
     <td valign="top">encoding</td>
     <td valign="top">The character encoding to use for filenames
-    inside the zip file.  For a list of possible values see <a
-    href="http://download.oracle.com/javase/1.5.0/docs/guide/intl/encoding.doc.html">http://download.oracle.com/javase/1.5.0/docs/guide/intl/encoding.doc.html</a>.
+    inside the zip file.  For a list of possible values see the <a
+                href="http://docs.oracle.com/javase/7/docs/technotes/guides/intl/encoding.doc.html">Supported Encodings</a>.<br/>
     Defaults to the platform's default character encoding.
       <br/>See also the <a href="#encoding">discussion below</a></td>
     <td align="center" valign="top">No</td>
