--- a/manual/Types/zipfileset.html
+++ b/manual/Types/zipfileset.html
@@ -92,8 +92,8 @@ directories.  Default is 755. <em>since Ant 1.5.2</em>.</td>
     <tr>
       <td valign="top">encoding</td>
       <td valign="top">The character encoding to use for filenames
-      inside the zip file.  For a list of possible values see <a
-      href="http://download.oracle.com/javase/1.5.0/docs/guide/intl/encoding.doc.html">http://download.oracle.com/javase/1.5.0/docs/guide/intl/encoding.doc.html</a>.
+      inside the zip file.  For a list of possible values see the <a
+      href="http://docs.oracle.com/javase/7/docs/technotes/guides/intl/encoding.doc.html">Supported Encodings</a>.
       Defaults to the platform's default character encoding.
       <b>Only supported by zipfileset.</b></td>
       <td align="center" valign="top">No</td>
