--- a/manual/Tasks/conditions.html
+++ b/manual/Tasks/conditions.html
@@ -278,9 +278,9 @@ or the filenames match the answer is so obvious the detailed test is omitted.
   </tr>
   <tr>
     <td valign="top">textfile</td>
-    <td valign="top">Whether to ignore line endings
-        when comparing files; defaults to <i>false</i>, while
-        <i>true</i> triggers a binary comparison. <b>Since Ant 1.7</b>
+    <td valign="top">Whether to ignore line endings when comparing
+        files; defaults to <i>false</i> which triggers a binary
+        comparison. <b>Since Ant 1.7</b>
     </td>
     <td align="center">No</td>
   </tr>
