document userAgent attribute.  PR 55489
git-svn-id: https://svn.apache.org/repos/asf/ant/core/trunk@1554406 13f79535-47bb-0310-9956-ffa450edef68

--- a/manual/Tasks/get.html
+++ b/manual/Tasks/get.html
@@ -121,6 +121,14 @@ plain text' authentication is used. This is only secure over an HTTPS link.
       setting.</td>
     <td align="center" valign="top">No; default "true"</td>
   </tr>
+  <tr>
+    <td valign="top">useragent</td>
+    <td valign="top">User-Agent HTTP header to send, starting with Ant
+      1.9.3 Ant will specify a User-Agent header of "Apache Ant VERSION"
+      unless overridden by this attribute<br/>
+      <em>since Ant 1.9.3</em></td>
+    <td align="center" valign="top">No</td>
+  </tr>
 </table>
 <h3>Parameters specified as nested elements</h3>
 <h4>any resource collection</h4>
