allow System.in to be passed to sshexec'ed process.  Patch by rosvit.  PR 55393
git-svn-id: https://svn.apache.org/repos/asf/ant/core/trunk@1555860 13f79535-47bb-0310-9956-ffa450edef68

--- a/manual/Tasks/sshexec.html
+++ b/manual/Tasks/sshexec.html
@@ -191,6 +191,13 @@ and won't work with versions of jsch earlier than
       <em>since Ant 1.8.3</em></td>
     <td align="center" valign="top">No, defaults to false</td>
   </tr>
+  <tr>
+    <td valign="top">useSystemIn</td>
+    <td valign="top">Whether to pass the current standard input to the
+      remote process.
+      <em>since Ant 1.9.4</em></td>
+    <td align="center" valign="top">No, defaults to false</td>
+  </tr>
 </table>
 
 <h3>Examples</h3>
